--- a/pom.xml
+++ b/pom.xml
@@ -82,7 +82,7 @@
                                 <mainClass>Main</mainClass>
                                 <preCp>anything</preCp>
                             </classPath>
-                            <icon>forge.ico</icon>
+                            <icon>beaker-8x.ico</icon>
                             <jre>
                                 <minVersion>1.8.0</minVersion>
                                 <jdkPreference>preferJre</jdkPreference>
